# Project_ppchem

./: .copier-answers.yml  Graph_Salt_Time.ipynb  LICENSE  MANIFEST.in  PPChem-Project.ipynb  Project_hydroponie.ipynb  README.md  Refill.ipynb  Report.ipynb  UserInput.ipynb  User_Input_modified.xlsx  desktop.ini  functions_file.py  genindex.html  index.html  pyproject.toml  searchindex.js  tox.ini
.doctrees/: index.doctree
.ipynb_checkpoints/: Project_hydroponie-checkpoint.ipynb
Ludo's folder/: Untitled.ipynb
_modules/: index.html
_modules/hydroponics/: Basic_functions.html  Generate_Report.html  PH_Approximation_0.html  Solutions_Solubility.html
_sources/api/: hydroponics.rst.txt
api/: hydroponics.html
data/: UserData.xlsx
docs/docs_out/: .buildinfo  index.html  objects.inv  py-modindex.html  search.html
docs/docs_out/.doctrees/: environment.pickle
docs/docs_out/.doctrees/api/: hydroponics.doctree  modules.doctree
docs/docs_out/_modules/hydroponics/: Refill_0.html  example_module.html  pH_graph_0.html
docs/docs_out/_sources/api/: modules.rst.txt
docs/docs_out/api/: modules.html
docs/source/: conf.py
docs/source/api/: hydroponics.rst
notebooks/: Tutorial.ipynb  project_report.ipynb
src/: Basic_functions.py  Generate_Report.py  Solutions&Solubility.py
src/data/: UserData.xlsx  molar_mass.csv
src/hydroponics/: Basic_functions.py  Generate_Report.py  PH_Approximation_0.py  Refill_0.py  Solutions&Solubility.py  Solutions_Solubility.py  __init__.py  pH_graph_0.py
src/hydroponics/data/: Solubility_data.csv  UserData.xlsx
tests/: Tests_Basic_functions.py  Tests_Solution_Solubility.py  Tests_debug.ipynb  basic_functions.py  debug_notebook.ipynb  test_Basic_functions_pH.py  test_Solution_Solubility.py  test_example_module.py
