[build-system] 
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hydroponics"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
description = "Simulation of hydroponic farming"
dependencies = [
    "numpy","sympy","reportlab","pandas","matplotlib","openpyxl"
]
authors = [
    {name = "Nils Theeten", email = "nils.theeten@epfl.ch"},
    {name = "Mathieu Penn", email = "mathieu.penn@epfl.ch"}
    
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["hydroponics",
        "plant growth",
        "pH calculation",
        "solution solubility",
        "plant simulation",
        "solution maker"

]
dynamic = ["version"]

[project.urls]
source = "https://github.com/NilsTheeten/hydroponics"
tracker = "https://github.com/NilsTheeten/hydroponics/issues"

[project.optional-dependencies]
test = [
    "hypothesis",
    "pytest",
    "pytest-cov",
    "tox",
    "genbadge[coverage]",
]
doc = [
    "furo",
    "myst-parser",
    "sphinx>=5",
    "sphinx-copybutton",
]

[tool.hatch.version]
path = "src/hydroponics/__init__.py"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.coverage.run]
omit = [
    '__init__.py'
]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
]
